# rf-string

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml  testing.yml
rf_string/: __init__.py  exceptions.py  rf_string.py
tests/: test_rf_string.py
