[tool.poetry]
name = "rf-string"
version = "0.1.0"
description = "rf-string provides functionality that allows for string definitions to be easily parsed and written."
authors = ["Jared Cuteri <jaredcuteri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
